--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "next": "15.1.7",
     "react": "^19.0.0",
